# openxcom-android

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle  import-summary.txt  private.enc
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 9_ufo-patch.zip.MD5  openxcom_data_marker  openxcom_patch_marker  openxcom_translation_marker  z_nomedia.zip.MD5
app/src/main/java/ar/com/daidalos/afiledialog/: FileChooser.java  FileChooserActivity.java  FileChooserCore.java  FileChooserDialog.java  FileChooserLabels.java
app/src/main/java/ar/com/daidalos/afiledialog/view/: FileItem.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/java/org/libsdl/openxcom/: DirsConfigActivity.java  FilesystemHelper.java  OpenXcom.java  PreloaderActivity.java  UiVisibilityChanger.java
app/src/main/java/org/libsdl/openxcom/config/: Config.java  DataCheckResult.java  DataChecker.java  Xcom1DataChecker.java  Xcom2DataChecker.java
app/src/main/java/org/libsdl/openxcom/util/: FilesystemHelper.java
app/src/main/jni/: Application.mk  CMakeLists.txt
app/src/main/jni/boost/boost/core/: demangle.hpp
app/src/main/jni/deps_cmake/: libmad.cmake  sdl.cmake  sdl2_image.cmake  sdl2_mixer.cmake  sdl_gfx.cmake  yaml-cpp.cmake
app/src/main/jni/libmad-0.15.1b/: Makefile  config.status  libtool
app/src/main/jni/libmad-0.15.1b/msvc++/: Makefile
app/src/main/jni/src/: Android.mk  SDL_android_main.c
app/src/main/jni/src/libflac_cfg/: config.h
app/src/main/res/layout/: activity_dirs_config.xml  activity_preloader.xml  daidalos_file_chooser.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
